--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <button onclick="salvarJogo()">Salvar Jogo</button>
     <button onclick="abrirConfiguracoes()">Configurações</button>
     <button onclick="mostrarCreditos()">Créditos</button>
+    <div id="codigo-container">
+      <input type="text" id="input-codigo" placeholder="Inserir código...">
+      <button onclick="resgatarCodigo()">Resgatar</button>
+    </div>
     <button onclick="fecharJogo()">Sair do Jogo</button>
     <p> O último herói (1.0) </p>
     <p> 2025 </p>
