--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button onclick="resgatarCodigo()">Resgatar</button>
     </div>
     <button onclick="fecharJogo()">Sair do Jogo</button>
-    <p> O último herói (1.0) </p>
+    <p> O último herói (1.1) </p>
     <p> 2025 </p>
   </div>
 
@@ -57,8 +57,8 @@ transform: translate(-50%, -50%); background-color: #f0f0f0; padding: 20px; bord
 
   <script>
 
-    function controlarCenariosPelaTecla(teclaPressionada) {
-      switch (teclaPressionada) {
+    function controlarCenariosPelaTecla(event) { // MUDADO de teclaPressionada para event
+      switch (event.key) { // MUDADO de teclaPressionada para event.key
         case '1':
           mudarCenario('imagens/vila.jpg');
           break;
@@ -69,14 +69,21 @@ transform: translate(-50%, -50%); background-color: #f0f0f0; padding: 20px; bord
           mudarCenario('imagens/caverna.jpg');
           break;
         case '4':
-          console.log("Teclas '4' OK. Ação: Mudar para a tela inicial.");
           voltarAoMenu();
           break;
+        case 'Tab': // NOVO
+          event.preventDefault(); // Impede o navegador de trocar de foco
+          toggleInventario();
+          break;
         default:
-          console.log("Nenhuma ação mapeada para a tecla: " + teclaPressionada);
           break;
       }
     }
+
+    document.addEventListener('keydown', function (event) {
+      // Apenas para ter certeza de que a função é chamada
+      controlarCenariosPelaTecla(event); // MUDADO para event
+    });
 
     document.addEventListener('keydown', function (event) {
       // Apenas para ter certeza de que a função é chamada
