--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <button onclick="salvarJogo()">Salvar Jogo</button>
     <button onclick="abrirConfiguracoes()">Configurações</button>
     <button onclick="mostrarCreditos()">Créditos</button>
+    <button onclick="mostrarConquistas()">Conquistas</button>
+    <button onclick="mostrarCreditos()">Créditos</button>
     <div id="codigo-container">
       <input type="text" id="input-codigo" placeholder="Inserir código...">
       <button onclick="resgatarCodigo()">Resgatar</button>
@@ -39,7 +41,7 @@
   <!-- Créditos -->
   <div id="creditos" style="display: none;">
     <h2>Créditos</h2>
-    <p>Desenvolvido por [Marcos]</p>
+    <p>Desenvolvido por Marcos</p>
     <p>Entre no nosso grupo do discord com o convite abaixo.
     <p>
       <a href="https://discord.gg/TyZN3BdEb3" class="discord-button" target="_blank">
@@ -51,7 +53,8 @@
   <div id="configuracoes" style="display: none; position: absolute; top: 50%; left: 50%;
 transform: translate(-50%, -50%); background-color: #f0f0f0; padding: 20px; border-radius: 10px; z-index: 999;">
     <h3>Configurações de Atalhos</h3>
-    <p>as teclas 1, 2, 3 e 4 são atalhos para os cenarios vila, floresta, caverna e menu.</p>
+    <p>as teclas 1, 2, 3 e 4 são atalhos para os cenarios vila, floresta, caverna e menu juntamente do atalho do tab
+      para o inventario.</p>
     <button onclick="fecharConfiguracoes()">Fechar</button>
   </div>
 
