--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
     <button onclick="abrirConfiguracoes()">Configurações</button>
     <button onclick="mostrarCreditos()">Créditos</button>
     <button onclick="mostrarConquistas()">Conquistas</button>
-    <button onclick="mostrarCreditos()">Créditos</button>
     <div id="codigo-container">
       <input type="text" id="input-codigo" placeholder="Inserir código...">
       <button onclick="resgatarCodigo()">Resgatar</button>
     </div>
     <button onclick="fecharJogo()">Sair do Jogo</button>
-    <p> O último herói (1.1) </p>
+    <p> O último herói (1.3) </p>
     <p> 2025 </p>
   </div>
 
@@ -117,9 +116,9 @@ transform: translate(-50%, -50%); background-color: #f0f0f0; padding: 20px; bord
       <div id="painel-botoes">
 
         <!-- Botões de navegação -->
-        <button onclick="mudarCenario('imagens/vila.jpg')">Ir para Vila</button>
-        <button onclick="mudarCenario('imagens/floresta.jpg')">Ir para Floresta</button>
-        <button onclick="mudarCenario('imagens/caverna.jpg')">Ir para Caverna</button>
+        <button id="btn-nav-vila" onclick="mudarCenario('imagens/vila.jpg')">Ir para Vila</button>
+        <button id="btn-nav-floresta" onclick="mudarCenario('imagens/floresta.jpg')">Ir para Floresta</button>
+        <button id="btn-nav-caverna" onclick="mudarCenario('imagens/caverna.jpg')">Ir para Caverna</button>
 
         <!-- Combate -->
         <div id="combate" style="display: none;">
@@ -163,6 +162,11 @@ transform: translate(-50%, -50%); background-color: #f0f0f0; padding: 20px; bord
         <div id="bruxa" style="display: none; margin: 10px;">
           <h3>Bruxa Encantadora 🔮</h3>
           <p>Use 1 cristal e 10 moedas para encantar seus equipamentos.</p>
+
+          <button id="botao-bruxa-historia" onclick="falarComBruxaSobreCriador()"
+            style="display: none; background: #311b92; width: 100%; margin-bottom: 5px;">
+            Conversar sobre o Criador
+          </button>
 
           <div>
             <button onclick="encantar('ataque')">Encantar Ataque (Cristais: <span id="cristal-ataque">0</span>)</button>
@@ -240,7 +244,7 @@ transform: translate(-50%, -50%); background-color: #f0f0f0; padding: 20px; bord
                 id="inventario-peitoral">Não</span>
             </div>
 
-            <button onclick="toggleInventario()">Fechar</button>
+            <button id="btn-inventario" onclick="toggleInventario()">Inventário</button>
           </div>
         </div>
 
@@ -282,7 +286,7 @@ transform: translate(-50%, -50%); background-color: #f0f0f0; padding: 20px; bord
       <div id="area-texto">
         <div id="game-text"></div>
         <div id="log"></div>
-        <button onclick="toggleInventario()">Inventário</button>
+        <button id="btn-inventario" onclick="toggleInventario()">Inventário</button>
         <div id="time-status" style="margin: 10px; display: flex; gap: 10px; font-size: 2rem;"></div>
         <h3>Time</h3>
         <ul id="lista-time"></ul>
