atualização final 1.4 (segunda tentativa)
atualização final 1.4 (segunda tentativa)

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <button onclick="voltarAoMenu()">Voltar ao Menu Principal</button>
+    <button onclick="voltarAoMenuPrincipal()">Voltar ao Menu Principal</button>
   </div>
 
   <div id="tela-mutators" class="tela-secundaria">
